--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <script src="res/jquery-1.9.1.min.js "></script>
         <script src="res/angular.min.js "></script>
         <script src="res/jquery.mobile-1.3.1.min.js "></script>
-        <!--<script src="phonegap.js"></script>-->
+        <script src="phonegap.js"></script>
         <script src="index_jqm_rest.js"></script>
-        <!--<script src="phonegap_gps.js"></script>-->
+        <script src="phonegap_gps.js"></script>
         <script>
-            $(document).ready(function() {
+            $(document).on("deviceready",function() {
                 $("#gpsLink").on('vclick', function() {
                     console.log('switching page');
                    $.mobile.changePage('#gpspage');
@@ -23,7 +23,7 @@
                 $("#saveLink").on('vclick', function() {
                     angular.element("#mainpage").scope().save();
                 });
-                // navigator.splashscreen.hide();
+                navigator.splashscreen.hide();
                 console.log('ready');
             })
         </script>
@@ -59,9 +59,16 @@
             </div>
         </div>
         
-        <!--<div id='gpspage' data-url='gpspage' data-role='page' ng-app="phonegapModule" ng-controller="phonegapCtrl">-->
-        <!--    <a href="mainpage" data-icon="back" data-theme="b" data-rel="back" data-role="button">Back</a>-->
-        <!--</div>-->
+        <div id='gpspage' data-url='gpspage' data-role='page' ng-app="phonegapModule" ng-controller="phonegapCtrl">
+            <div data-role="header"><h1>Current position</h1></div>
+            <div data-role="content">
+                {{gpsLocation}}
+            </div>
+            <div data-role="footer" data-position="fixed">
+                <a href="#" data-icon="back" data-theme="b" id="gpsSync" >Sync</a>
+                <a href="#mainpage" data-icon="back" data-theme="b" data-rel="back" >Back</a>
+            </div>
+</div>
 
 </body>
 </html>
