--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <script src="res/angular.min.js "></script>
         <script src="res/jquery.mobile-1.3.1.min.js "></script>
         <script src="phonegap.js"></script>
-        <script src="index_jqm_rest.js"></script>
         <script src="phonegap_gps.js"></script>
+        <script src="index_jqm_rest.js"></script>
         <script>
             $(document).on("deviceready",function() {
                 $("#gpsLink").on('vclick', function() {
@@ -62,11 +62,15 @@
         <div id='gpspage' data-url='gpspage' data-role='page' ng-app="phonegapModule" ng-controller="phonegapCtrl">
             <div data-role="header"><h1>Current position</h1></div>
             <div data-role="content">
-                {{gpsLocation}}
+                <p>{{gpsLocation}}</p>
             </div>
             <div data-role="footer" data-position="fixed">
-                <a href="#" data-icon="back" data-theme="b" id="gpsSync" >Sync</a>
-                <a href="#mainpage" data-icon="back" data-theme="b" data-rel="back" >Back</a>
+             <div data-role="navbar">
+             <ul>
+                <li><a href="#" data-icon="back" data-theme="b" id="gpsSync" >Sync</a></li>
+                <li><a href="#mainpage" data-icon="back" data-theme="b" data-rel="back" >Back</a></li>
+            </ul>   
+            </div>
             </div>
 </div>
 
