--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html ng-app="jqmREST" >
     <head>
         <title>Hello World</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,6 @@
         <script src="res/angular.min.js "></script>
         <script src="res/jquery.mobile-1.3.1.min.js "></script>
         <script src="phonegap.js"></script>
-        <script src="phonegap_gps.js"></script>
         <script src="index_jqm_rest.js"></script>
         <script>
             $(document).on("deviceready",function() {
@@ -29,8 +28,8 @@
         </script>
     </head>
     
-    <body>
-        <div id='mainpage' data-url='mainpage' data-role='page' ng-app="jqmREST" ng-controller="jqmRESTctrl">
+    <body ng-controller="jqmRESTctrl">
+        <div id='mainpage' data-url='mainpage' data-role='page'>
             <div data-role="header" data-theme="b">
                 <a href="#" id="gpsLink" data-icon="star">GPS</a>
                 <h1>Hello {{yourCountry}}</h1>
@@ -59,7 +58,7 @@
             </div>
         </div>
         
-        <div id='gpspage' data-url='gpspage' data-role='page' ng-app="phonegapModule" ng-controller="phonegapCtrl">
+        <div id='gpspage' data-url='gpspage' data-role='page'>
             <div data-role="header"><h1>Current position</h1></div>
             <div data-role="content">
                 <p>{{gpsLocation}}</p>
