--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
         <script src="res/jquery-1.9.1.min.js "></script>
         <script src="res/angular.min.js "></script>
         <script src="res/jquery.mobile-1.3.1.min.js "></script>
-        <script src="phonegap.js"></script>
+        <script src="phonegap.js"></script> 
         <script src="index_jqm_rest.js"></script>
         <script>
-            $(document).on("deviceready",function() {
+    	$(document).ready(function() {
+			console.log("document ready");
+		});
+		document.addEventListener("deviceready", function(){
+				console.log("deviceready");
                 $("#gpsLink").on('vclick', function() {
                     console.log('switching page');
                    $.mobile.changePage('#gpspage');
@@ -22,9 +26,12 @@
                 $("#saveLink").on('vclick', function() {
                     angular.element("#mainpage").scope().save();
                 });
+				$("#syncGPS").on('vclick', function() {
+                    angular.element("#mainpage").scope().syncGPS();
+				});
                 navigator.splashscreen.hide();
                 console.log('ready');
-            })
+            }, false);
         </script>
     </head>
     
@@ -61,12 +68,12 @@
         <div id='gpspage' data-url='gpspage' data-role='page'>
             <div data-role="header"><h1>Current position</h1></div>
             <div data-role="content">
-                <p>{{gpsLocation}}</p>
+                <p id="gpsLocation">{{gpsLocation}}</p>
             </div>
             <div data-role="footer" data-position="fixed">
              <div data-role="navbar">
              <ul>
-                <li><a href="#" data-icon="back" data-theme="b" id="gpsSync" >Sync</a></li>
+                <li><a href="#" data-icon="refresh" data-theme="b" id="syncGPS" >Sync</a></li>
                 <li><a href="#mainpage" data-icon="back" data-theme="b" data-rel="back" >Back</a></li>
             </ul>   
             </div>
