--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         console.log("trackPage "+msg);
                     },
     
-                    function(msg {
+                    function(msg) {
                         console.log("trackPage failed "+msg);
                     }, "be.sirris.phonegap-demo.main"
                 );
